--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,4 @@
-{% load staticfiles %}
+{% load static %}
 
 <!DOCTYPE html>
 <html lang="en">
@@ -7,7 +7,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>D&D BitTorrent</title>
+    <title>LIP</title>
     <!-- Bootstrap -->
     <link href="{% static '/css/bootstrap.min.css' %}" rel="stylesheet">
     <link rel="stylesheet" href="{% static '/css/font-awesome.min.css' %}">
@@ -35,10 +35,11 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="/home">D&D BitTorrent</a>
+                <!-- <a class="navbar-brand" href="/">LIP App</a> -->
             </div>
-            {% block menu-bar %}
 
+            {% block menu-bar %}
+            
             {% endblock %}
 
         </div>
@@ -52,7 +53,6 @@
 {% block body %}
 
 {% endblock %}
-
 
 <!--/#footer-->
 
