--- a/templates/lmc.html
+++ b/templates/lmc.html
@@ -4,10 +4,10 @@
 {% block menu-bar %}
 <div class="collapse navbar-collapse navbar-right">
     <ul class="nav navbar-nav">
-        <li class="active"><a href="/">Inicio</a></li>
+        <li><a href="/">Inicio</a></li>
         <li><a href="/load">Upload</a></li>
         <li><a href="/ops">Operaciones</a></li>
-        <li><a href="/lac">LAC</a></li>
+        <li class="active"><a href="/lac">LAC</a></li>
         <li><a href="/lmc">LMC</a></li>
     </ul>
 </div>
@@ -51,7 +51,10 @@
             {#              <img src="{%  static '/images/bit/8.jpg'%}" class="img-responsive" alt="">#}
             {#            </div>#}
             {#            <div class="item">#}
-            <img src="{% static '/images/bit/10.jpg' %}" class="img-responsive" alt="">
+            {% block image %}
+                Image LMC
+                <!-- <img src="" class="img-responsive" alt=""> -->
+            {% endblock %}
             {#            </div>#}
             {#              <div class="item">#}
             {#              <img src="{%  static '/images/bit/10.jpg'%}" class="img-responsive" alt="">#}
@@ -75,7 +78,7 @@
         </div>
     </div>
 
-    <section id="feature">
+    <!-- <section id="feature">
         <div class="container">
             <div class="center wow fadeInDown">
                 <h2>Welcome to the Swarm</h2>
@@ -91,7 +94,6 @@
                             <h3>Discover available files to be downloaded</h3>
                         </div>
                     </div>
-                    <!--/.col-md-4-->
 
                     <div class="col-md-4 col-sm-6 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms">
                         <div class="feature-wrap">
@@ -100,7 +102,6 @@
                             <h3>Control the state of your downloads</h3>
                         </div>
                     </div>
-                    <!--/.col-md-4-->
 
                     <div class="col-md-4 col-sm-6 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms">
                         <div class="feature-wrap">
@@ -111,12 +112,12 @@
                     </div>
 
                 </div>
-                <!--/.services-->
+                
             </div>
-            <!--/.row-->
+            
         </div>
-        <!--/.container-->
-    </section>
+        
+    </section> -->
     <!--/#feature-->
 
 
