--- a/templates/upload.html
+++ b/templates/upload.html
@@ -1,25 +1,100 @@
 {% extends 'base.html' %}
+{% load static %}
 
 {% block menu-bar %}
-<div class="collapse navbar-collapse navbar-right">
-    <ul class="nav navbar-nav">
-        <li><a href="/">Inicio</a></li>
-        <li class="active"><a href="/load">Upload</a></li>
-        <li><a href="/ops">Operaciones</a></li>
-        <li><a href="/lac">LAC</a></li>
-        <li><a href="/lmc">LMC</a></li>
-    </ul>
-</div>
+    <div class="collapse navbar-collapse navbar-right">
+        <ul class="nav navbar-nav">
+            <li><a href="/home">Home</a></li>
+            <li><a href="/files">Files</a></li>
+            <li><a href="/dwns">Downloads</a></li>
+            <li class="active"><a href="/uplds">Uploads</a></li>
+        </ul>
+    </div>
 {% endblock %}
 
 {% block body %}
     <div class=slider>
+
         <div class="container">
-            <form method="post" enctype="multipart/form-data">
-                {% csrf_token %}
-                {{ form.as_p }}
-                <button type="submit">Upload Image</button>
-            </form>
+            <div class="row" style="margin-bottom: 10px">
+                <div class="col-md-5">
+                    <form role="form" type="get" action=".">
+                        <input id="search_box" name="search_box" type="text" class="form-control search_box"
+                               autocomplete="off" placeholder="Search Here" value= {{ query }}>
+                    </form>
+                </div>
+            </div>
+            <div class="row" style="margin-bottom: 20px ; margin-left: 2px">
+                <form method="post" enctype="multipart/form-data">
+                    {% csrf_token %}
+                    <p><label for="id_uploaded_file">Select file to upload:</label> <input type="file"
+                                                                                           name="uploaded_file"
+                                                                                           required
+                                                                                           id="id_uploaded_file">
+                    </p>
+                    <button type="submit">Upload File</button>
+                </form>
+                {% if error %}
+                    <p> {{ error }} </p>
+                {% endif %}
+                {#                <a class="btn btn-primary col"  href="{% url 'upload_file' %}"> Upload File</a>#}
+            </div>
+
         </div>
+        {% if Folders %}
+
+            <div class="container">
+            <div class="accordion">
+                <div class="panel-group" id="accordion1">
+                    {% for folder in Folders %}
+
+                        <div class="panel panel-default">
+                        <div class="panel-heading">
+                            <h3 class="panel-title">
+                                <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion1"
+                                   href="#{{ folder|slugify }}">
+                                    {{ folder }}
+                                    <i class="fa fa-angle-right pull-right"></i>
+                                </a>
+                            </h3>
+                        </div>
+
+                        <div id="{{ folder|slugify }}" class="panel-collapse collapse">
+                            <div class="panel-body">
+                                <div class="media accordion-inner">
+                                    <div class="pull-left">
+                                        <a class="fa fa-eye" href="{% static "/imgs/" %}{{folder}}/{{folder}}.jpg"> View Image</a>
+                                    </div>
+                                    <div>
+                                        <a class="fa fa-check" href="select/{{folder}}"></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+
+                    {% endfor %}
+                    </div>
+                </div>
+            </div>
+            {#        {% if FILES %}#}
+            {#        <ul class="pagination pagination-lg">#}
+            {#            <li><a href="#"><i class="fa fa-long-arrow-left"></i></a></li>#}
+            {#            <li class="active"><a href="#">1</a></li>#}
+            {#            <li><a href="#">2</a></li>#}
+            {#            <li><a href="#">3</a></li>#}
+            {#            <li><a href="#">4</a></li>#}
+            {#            <li><a href="#">5</a></li>#}
+            {#            <li><a href="#"><i class="fa fa-long-arrow-right"></i></a></li>#}
+            {#        </ul>#}
+            {#        {% endif %}#}
+        {% else %}
+            <div class="container">
+                <h2>No files to show</h2>
+            </div>
+        {% endif %}
+        </div>
+
+
     </div>
 {% endblock %}
